--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,28 @@ section {
     cursor: pointer;
 }
 
+.btn-gradient {
+    background-image: var(--gradient-color);
+}
+
+.btn-gradient:hover {
+    background-image: var(--gradient-color-alt);
+}
+
+.btn-purple {
+    background-color: var(--purple-solid);
+}
+
+.btn-purple:hover {
+    background-color: #56247f;
+}
+
+.dots {
+    font-size: 2.4rem;
+    margin-left: 0.5rem;
+    opacity: .75;
+}
+
 /* header styles */
 .header {
     width: 100%;
@@ -193,20 +215,6 @@ section {
     font-family: 'Courgette', cursive;
 }
 
-.btn-gradient {
-    background-image: var(--gradient-color);
-}
-
-.btn-gradient:hover {
-    background-image: var(--gradient-color-alt);
-}
-
-.dots {
-    font-size: 2.4rem;
-    margin-left: 0.5rem;
-    opacity: .75;
-}
-
 /* Booking section styles */
 .booking {
     background-image: var(--gradient-color);
@@ -238,10 +246,84 @@ section {
     /* resize: none; */
 }
 
-.btn-purple {
-    background-color: var(--purple-solid);
+::placeholder {
+    color: inherit;
 }
 
-.btn-purple:hover {
-    background-color: #56247f;
+/* featured hotels section styles */
+
+.section-head {
+    text-align: center;
+    margin-bottom: 5rem;
+}
+
+.heading {
+    display: block;
+    font-size: 4rem;
+    text-transform: uppercase;
+}
+
+.sub-heading {
+    font-size: 1.7rem;
+    font-family: 'Courgette', cursive;
+    font-weight: 300;
+    color: #a5a5a5;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-gap: 2.5rem;
+}
+
+.grid-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.featured-hotels {
+    height: 35rem;
+    color: #ffffff;
+    padding: 1rem;
+    position: relative;
+    z-index: 0;
+}
+
+.featured-hotels::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--purple-transparent-alt);
+    z-index: -1;
+}
+
+.hotel-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+}
+
+.hotel-name {
+    font-size: 2.6rem;
+}
+
+.hotel-price {
+    font-size: 1.8rem;
+}
+
+.hotel-rating {
+    margin: 1rem 0 2.5rem;
+}
+
+.rating {
+    color: var(--yellow-solid);
 }
