--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,10 @@ section {
     z-index: 999;
 }
 
+.header.active{
+    background-color: var(--purple-solid);
+}
+
 /* Header styles - nav */
 .nav {
     display: flex;
@@ -511,4 +515,167 @@ section {
 
 .sm-link i {
     margin: auto;
+}
+
+
+/* Media queries */
+@media screen and (min-width: 768px) {
+    /* header section styles */
+    .header{
+        height: 10rem;
+    }
+
+    .header.active{
+        height: 6rem;
+    }
+
+    /* hero section styles */
+    .title{
+        font-size: 8rem;
+    }
+
+    /* contact section styles */
+    .contact-content{
+        justify-content: space-between;
+    }
+
+    .traveller-wrap{
+        display: block;
+        flex: 0 0 45%;
+    }
+
+    .traveller-wrap img{
+        width: 100%;
+    }
+
+    .contact-form{
+        flex: 0 0 50%;
+        align-self: flex-start;
+    }
+
+    .input-group-wrap{
+        display: flex;
+    }
+
+    .input-group-wrap .input-group{
+        width: 50%;
+        margin-right: 2rem;
+    }
+
+    .input-group-wrap .input-group:last-child{
+        margin-right: 0;
+    }
+
+    /* Footer Section Styles */
+    .footer{
+        overflow-x: hidden;
+    }
+
+    .footer-content{
+        display: flex;
+    }
+
+    .footer-content-brand{
+        margin-bottom: 0;
+        flex: 0 0 60%;
+    }
+
+    .footer .paragraph{
+        margin-top: 2.5rem;
+    }
+
+    .footer-heading{
+        margin-bottom: 5rem;
+    }
+
+    .social-media-wrap{
+        flex: 0 0 40%;
+        margin-left: 2.5rem;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    section:not(.booking){
+        padding: 10rem 0;
+    }
+
+    /* header section styles */
+    .hamburger-menu{
+        display: none;
+    }
+    
+    .nav-list{
+        position: initial;
+        width: initial;
+        height: initial;
+        background-color: transparent;
+        flex-direction: row;
+        justify-content: initial;
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    .nav-item:not(:last-child){
+        margin-right: 3rem;
+        margin-bottom: 0;
+    }
+
+    .nav-link{
+        font-size: 1.3rem;
+        font-weight: normal;
+        transition: color .5s;
+    }
+
+    .nav-link:hover{
+        color: var(--yellow-solid);
+    }
+
+    /* hero section styles */
+    .title{
+        font-size: 12rem;
+    }
+
+    .subtitle{
+        font-size: 4.6rem;
+    }
+
+    /* Booking section styles */
+    .book-form{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .book-form .input-group{
+        margin-bottom: 0;
+    }
+
+    .book-form .input-group:first-child{
+        flex: 0 0 20%;
+    }
+
+    .input, .options{
+        min-width: 9.rem;
+    }
+
+    /* room section styles */
+    .rooms-grid{
+        grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+        grid-gap: 8rem;
+    }
+
+    .featured-rooms{
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    .room-info-wrap{
+        margin-left: 1.5rem;
+    }
+
+}
+
+@media screen and (min-width: 1200px){
+    .book-form .input-group:first-child{
+        flex: 0 0 30%;
+    }
 }
